kubernetes/main/apps/network/external-services/omada/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: omada
  namespace: network
spec:
  ports:
    - protocol: TCP
      port: 8083
---
apiVersion: v1
kind: Endpoints
metadata:
  name: omada
  namespace: network
subsets:
  - addresses:
      - ip: 10.1.10.200
    ports:
      - port: 8083
