kubernetes/main/apps/network/external-services/omada/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omada
  namespace: network
  annotations:
  nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
  nginx.ingress.kubernetes.io/use-regex: "true"
  #nginx.ingress.kubernetes.io/upstream-vhost: "omada.robsonhome.cloud:8083"
  nginx.ingress.kubernetes.io/proxy-redirect-from: "~https://(.+):8083/(.+)/login$"
  nginx.ingress.kubernetes.io/proxy-redirect-to: "https://$1/$2/login"
spec:
  ingressClassName: internal
  rules:
    - host: &host omada.robsonhome.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omada
                port:
                  number: 8083
  tls:
    - hosts:
        - *host
